--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "brian2694/laravel-toastr": "^5.59",
         "dhtmlx/connector-php": "^3.0",
         "dompdf/dompdf": "^3.0",
